Add clarifai service to detect ingredient from uploaded image
